# Qpydict

./: .gitignore  AUTHORS  README.md  pyproject.toml  setup.py
src/: #module.c#  .#module.h  module.c  module.h  types.h
src/internal/: methods.c
src/internal/include/: #methods.h#  .#methods.h  methods.h  methods.h~  types.h  types.h~
test/: build.sh  e  test_init_class.py  test_module.py
test/project_hello/: hello_project.c  hello_project.py
test/project_hello/hello_cpyapi/: hello_world.c  pyproject.toml  setup.py  test.py
