[build-system]
 requires     = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where   = ["src"]
include = ["*"]

[tool.setuptools.package-data]
Add = ["src/*.c"]

[project]
name            = "Qpydict"
description     = "A Fast Python Dictionary"
version         = "0.0.0"
requires-python = ">=3.11"
authors         = [{name = "Michael Saviour", email = "saviourme33@gmail.com"}]
maintainers     = [{name = "Michael Saviour", email = "saviourme33@gmail.com"}]
readme          = {file = "README.md", content-type = "text/markdown"}
license         = "MIT"
license-files   = ["LICEN[CS]E*", "AUTHORS.md"]
keywords        = ["Qpydict", "dict", "pydict", "dictionary", "fast", "Map"]
classifiers     = [
    "Development Status :: 0",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: Python Dictionary :: Libraries",
]
dependencies    = []

[project.urls]
Homepage      = "https://github.com/Qpydict/"
Repository    = "https://github.com/Qpydict/Qpydict.git"
Issues        = "https://github.com/Qpydict/Qpydict/issues"
Documentation = "https://github.com/Qpydict/README.md"
