[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "hello_world"
version         = "1.0.0"
description     = "A Python's Helloworld module in C"
readme          = "README.md"
license         = { file = "LICENSE" }
requires-python = ">=3.8"

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
]

dependencies = []

[project.optional-dependencies]
# Install with:  pip install Add[dev]
dev = ["pytest>=7", "twine>=5", "build>=1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hello*"]
